<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:inputType="text"
                    android:id="@+id/team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/team_a_name"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/team_a_score"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/team_a_touchdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="teamATouchdown"
                    android:text="@string/touchdown_button"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/team_a_extra_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="teamAExtraPoint"
                    android:text="@string/extra_point_button"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/team_a_2_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="teamATwoPoints"
                    android:text="@string/two_point_button"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/team_a_field_goal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="teamAFieldGoal"
                    android:text="@string/field_goal_button"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/team_a_safety"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="teamASafety"
                    android:text="@string/safety_button"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:inputType="text"
                    android:id="@+id/team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/team_b_name"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/team_a_score"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/team_b_touchdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="teamBTouchdown"
                    android:text="@string/touchdown_button"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/team_B_extra_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="teamBExtraPoint"
                    android:text="@string/extra_point_button"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/team_B_2_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="teamBTwoPoints"
                    android:text="@string/two_point_button"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/team_b_field_goal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="teamBFieldGoal"
                    android:text="@string/field_goal_button"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/team_b_safety"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="teamBSafety"
                    android:text="@string/safety_button"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:onClick="resetScores"
            android:text="@string/reset_button"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>